style.css
/* ... */
        .project-6 {
            grid-area: project-6;
        }
        .project-7 {
            grid-area: project-7;
        }

        .y-divider {
            grid-area: y-divider;
        }
        .x-divider-1 {
            grid-area: x-divider-1;
        }
        .x-divider-2 {
            grid-area: x-divider-2;
        }
        .x-divider-3 {
            grid-area: x-divider-3;
        }
        .x-divider-5 {
            grid-area: x-divider-5;
        }
        .x-divider-6 {
            grid-area: x-divider-6;
        }


    /* projects: */
    main.project-page {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .page-title {
        font-size: calc(0.6*var(--rvv));
        font-weight: 100;
        padding: calc(0.23*var(--rvv));
        margin-top: auto;
        margin-bottom: auto;
    }

    .wrapper {
        margin-bottom: auto;
        max-width: 90vw;
        width: 1000px;
        display: flex;
        justify-content: space-between;
        gap: 10px;
    }

    .back-container {
        display: flex;
        justify-content: flex-end;
        align-items: center;
    }

    .back {
        height: calc(0.5*var(--rvv));
        display: flex;
        justify-content: flex-end;
        align-items: center;
        cursor: pointer;
    }

    .image-container img {
        width: 100%;
        height: auto;
        max-height: 70vh;
    }

    .forward-container {
        display: flex;
        justify-content: flex-start;
        align-items: center;
    }

    .forward {
        height: calc(0.5*var(--rvv));
        display: flex;
        justify-content: flex-start;
        align-items: center;
        cursor: pointer;
    }
    

footer {
    width: 100%;
    height: 5vh;
}
/* ... */

